--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/kevidently/ApacheParser/issues"
   },
-  "homepage": "https://github.com/kevidently/ApacheParser#readme"
+  "homepage": "https://github.com/kevidently/ApacheParser#readme",
+  "dependencies": {
+    "fs": "0.0.1-security",
+    "http": "0.0.0",
+    "readline": "^1.3.0"
+  }
 }
